--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends './base.html' %}
+{% block head %}
+<link rel="stylesheet" href="{% static 'index/css/index.css' %}">
+{% endblock %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
 
-<body>
-    <h2>Este es el home del proyecto</h2>
-</body>
 
-</html>
+
+
+
+{% block content %}
+
+<h1>Este es el home de la pagina</h1>
+
+
+<div class="div-1">
+    <h1>Esto es un text</h1>
+</div>
+
+{% endblock %}
