--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 {% extends './base.html' %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'index/css/index.css' %}">
