--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -1,8 +1,8 @@
+{% extends './base.html' %}
 {% load static %}
 
-{% extends './base.html' %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'index/css/index.css' %}">
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
 {% endblock %}
 
 
