--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -19,4 +19,10 @@
     <h1>Esto es un text</h1>
 </div>
 
+<form action="">
+    <label for="">
+        <input type="email" name="" id="">
+    </label>
+</form>
+
 {% endblock %}
